Package: R.rsp
==============

Version: 0.5.0 [2011-04-12]
o Added rsp().
o Changed RSP preprocess directives to have format <%#insert ...%>.
o DOCUMENTATION: Updated 'Dynamic LaTeX reports with RSP' vignette.


Version: 0.4.10 [2011-04-06]
o RSP PAGES: Added a demo page listing all built-in colors in R.
o RSP PAGES: Now the 'R Server Pages' page launched by browseRsp()
  list only the first package installation in case a package
  occurs in multiple package libraries in .libPaths().


Version: 0.4.9 [2011-04-04]
o Added support for RSP preprocessing directive <%@insert ...%>.


Version: 0.4.8 [2011-03-31]
o Now parseRsp() drops RSP comments, i.e. '<%-- {anything} --%>'.
o Rewrote evalWithEcho() so that it utilizes source(..., echo=TRUE).
o DOCUMENTATION: Additional updates on the 'Dynamic LaTeX reports 
  with RSP' vignette.
o DOCUMENTATION: Now the RSP documentation is automatically
  generated when the package is built.


Version: 0.4.7 [2011-03-28]
o Additional updates on the 'Dynamic LaTeX reports with RSP' vignette.
o BUG FIX: write() for RspResponse classes would ignore arguments
  'collapse' and 'sep'.


Version: 0.4.6 [2011-03-12]
o Now the trimming of RSP handles all newline types, i.e. LF, 
  CR+LF, and CR.  The corresponding argument 'trimRsp' now 
  defaults to TRUE everywhere.
o BUG FIX: The main 'R Server Pages' page launched by browseRsp()
  would list package twice on a Windows system.
o CLEANUP: Some minor R code cleanups.


Version: 0.4.5 [2011-03-08]
o Updated getParameter() of HttpRequest to return all values of a
  query parameter with multiple entries.  Added argument 'drop'.
o BUG FIX: getHttpRequest() of HttpDaemon would drop all but the last
  of replicated query parameters of the same name, which for instance
  may occur if an HTML form with replicated checkboxes is used.
  Thanks to Truc Trung at University of Bergen, Norway, for this report.


Version: 0.4.4 [2011-03-08]